syntax = "proto3";

option csharp_namespace = "Gateway";

service Logon {
  rpc Login (LoginRequest) returns (LoginReply);  
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordReply);  
  rpc CheckDbStatus (CheckRequest) returns (CheckReply);
  rpc CheckStatus (CheckRequest) returns (CheckReply);  
  rpc ChangeRole (RoleChangeRequest) returns (ChangeReply);
  rpc GetUsers (UsersRequest) returns (UsersReply);
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginReply {
  bool success = 1;
  string uid = 2;
  string role = 3;
}

message ChangePasswordRequest {
  string name = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordReply {
  bool success = 1;
}

message CheckRequest {
}

message CheckReply {
  bool success = 1;
}

message RoleChangeRequest {
  string uid = 1;
  string role = 2;
}

message ChangeReply {
  bool success = 1;
}

message UsersRequest {
}

message User {
    int32 id = 1;
    string name = 2;
    string role = 3;
}
message UsersReply {
    repeated User users = 1;
}